fix about us header and footer font size on mobile screen and added estonsoft logo in title

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -275,6 +275,14 @@
     margin-right: 0 !important;
     padding: 0 1rem !important;
   }
+  .footer-section h4{
+    font-size:1.5rem;
+    margin-bottom: 0;
+  }
+  .footer-section ul {
+    font-size: 1rem;
+    line-height: 2.25rem;
+  }
 
   .footer-social {
     justify-content: center;
