--- a/frontend/src/pages/HomePage/AboutUs.css
+++ b/frontend/src/pages/HomePage/AboutUs.css
@@ -247,7 +247,7 @@
         width: 100% !important;
         font-size: 2.2rem !important;
         height: auto !important;
-        margin-top: 0 !important;
+        margin-top: 1.5rem !important;
         margin-bottom: 0.5rem !important;
         padding: 0 !important;
         top: auto !important;
@@ -261,6 +261,7 @@
         height: auto !important;
         padding: 0 !important;
         margin-bottom: 0 !important;
+        margin-top: 0 !important;
         line-height: 1.6 !important;
         top: auto !important;
         left: auto !important;
